--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="black_overlay">#66000000</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrey">#95989A</color>
+    <color name="colorRed">#FFFF0000</color>
 </resources>
