--- a/app/src/main/res/layout/fragment_my_status.xml
+++ b/app/src/main/res/layout/fragment_my_status.xml
@@ -16,47 +16,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.neo.arcchartview.ArcChartView
+            android:id="@+id/acvStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/rlCloud"
-            app:layout_constraintVertical_bias="1.0">
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:alpha="0.4"
-                android:background="@drawable/circle_fourth_path"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="parent"/>
-
-            <FrameLayout
-                android:id="@+id/circleFourthPath"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle_fourth_path"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+            app:acv_icon_size="0dp"
+            app:acv_lines_count="100"
+            app:acv_lines_space="0dp"
+            app:acv_lines_width="1dp"
+            app:acv_mid_start_extra_offset="50dp"
+            app:acv_sections_count="6"
+            app:acv_sections_space="5dp"
+            app:acv_start_degree_offset="270"
+            app:acv_allow_animations_on_set_values="false"
+            app:layout_constraintBottom_toTopOf="@+id/rlCloud"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
             android:id="@+id/rlCloud"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_vertical_margin"
             android:onClick='@{(v) -> viewModel.calculatePercents()}'
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="@dimen/activity_vertical_margin">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -75,10 +61,10 @@
 
             <TextView
                 style="@style/HeaderText"
-                android:layout_marginTop="65dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="65dp"
                 android:text='@{String.format("%,.2f%%", safeUnbox(viewModel.somePercents)*100F)}'
                 android:textColor="#FFFFFFFF"
                 tools:text="10%" />
