--- a/app/src/main/res/layout/fragment_my_status.xml
+++ b/app/src/main/res/layout/fragment_my_status.xml
@@ -16,23 +16,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.neo.arcchartview.ArcChartView
-            android:id="@+id/acvStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:acv_icon_size="0dp"
-            app:acv_lines_count="100"
-            app:acv_lines_space="0dp"
-            app:acv_lines_width="1dp"
-            app:acv_mid_start_extra_offset="50dp"
-            app:acv_sections_count="6"
-            app:acv_sections_space="5dp"
-            app:acv_start_degree_offset="270"
-            app:acv_allow_animations_on_set_values="false"
+        <com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout
+            android:layout_width="210dp"
+            android:layout_height="210dp"
+            android:paddingTop="5dp"
+            android:paddingStart="8dp"
             app:layout_constraintBottom_toTopOf="@+id/rlCloud"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:porterduffxfermode="DST_IN"
+            app:mask="@drawable/arc_chart_mask"
+            tools:ignore="RtlSymmetry">
+
+            <com.neo.arcchartview.ArcChartView
+                android:id="@+id/acvStatus"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:acv_allow_animations_on_set_values="false"
+                app:acv_icon_size="0dp"
+                app:acv_lines_count="100"
+                app:acv_lines_space="0dp"
+                app:acv_lines_width="1dp"
+                app:acv_mid_start_extra_offset="50dp"
+                app:acv_sections_count="6"
+                app:acv_sections_space="5dp"
+                app:acv_start_degree_offset="270" />
+
+        </com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout>
 
         <RelativeLayout
             android:id="@+id/rlCloud"
