--- a/app/src/main/res/layout/fragment_my_status.xml
+++ b/app/src/main/res/layout/fragment_my_status.xml
@@ -12,21 +12,24 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/motionLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/scene_01"
+        tools:showPaths="true">
 
         <com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout
             android:layout_width="295dp"
             android:layout_height="295dp"
-            android:paddingTop="5.2dp"
             android:paddingStart="5.2dp"
+            android:paddingTop="5.2dp"
             app:layout_constraintBottom_toTopOf="@+id/rlCloud"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:porterduffxfermode="DST_IN"
             app:mask="@drawable/arc_chart_mask"
+            app:porterduffxfermode="DST_IN"
             tools:ignore="RtlSymmetry">
 
             <com.neo.arcchartview.ArcChartView
@@ -82,6 +85,13 @@
 
         </RelativeLayout>
 
+        <View
+            android:id="@+id/button"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_2"
+            android:foreground="@drawable/ic_heart_24dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
