--- a/app/src/main/res/layout/fragment_my_status.xml
+++ b/app/src/main/res/layout/fragment_my_status.xml
@@ -16,7 +16,7 @@
         android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/scene_01"
+        app:layoutDescription="@xml/scene_my_status_in"
         tools:showPaths="true">
 
         <com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout
@@ -86,12 +86,61 @@
         </RelativeLayout>
 
         <View
-            android:id="@+id/button"
+            android:id="@+id/vUser"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:foreground="@drawable/ic_user_32dp"
+            android:focusable="true"
+            android:clickable="true"
+            android:onClick='@{(v) -> viewModel.calculatePercents()}'/>
+
+        <View
+            android:id="@+id/vHeart"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:background="@drawable/circle"
             android:backgroundTint="@color/arch_chart_sector_2"
             android:foreground="@drawable/ic_heart_24dp" />
+
+        <View
+            android:id="@+id/vTime"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_3"
+            android:foreground="@drawable/ic_time_24dp" />
+
+        <View
+            android:id="@+id/vFire"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_4"
+            android:foreground="@drawable/ic_fire_24dp" />
+
+        <View
+            android:id="@+id/vWind"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_1"
+            android:foreground="@drawable/ic_wind_24dp" />
+
+        <View
+            android:id="@+id/vEarth"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_0"
+            android:foreground="@drawable/ic_earth_24dp" />
+
+        <View
+            android:id="@+id/vEat"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/arch_chart_sector_5"
+            android:foreground="@drawable/ic_eat_24dp" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
